--- a/app/public/post.html
+++ b/app/public/post.html
@@ -10,7 +10,7 @@ xhr.onreadystatechange = function () {
         parent.postMessage(xhr.responseText, '*')
     }
 }
-xhr.open('GET', 'http://x.stuq.com:7001/json', true)
+xhr.open('GET', 'http://x.localhost.com:7001/json', true)
 xhr.send(null)
 </script>
 </body>
