--- a/app/public/hash.html
+++ b/app/public/hash.html
@@ -8,10 +8,10 @@ var xhr = new XMLHttpRequest()
 xhr.onreadystatechange = function () {
     if (xhr.readyState === 4 && xhr.status === 200) {
         var res = JSON.parse(xhr.responseText)
-        parent.location.href = `http://y.stuq.com:7001/public/3.html#msg=${res.msg}`
+        parent.location.href = `http://y.localhost.com:7001/public/3.html#msg=${res.msg}`
     }
 }
-xhr.open('GET', 'http://x.stuq.com:7001/json', true)
+xhr.open('GET', 'http://x.localhost.com:7001/json', true)
 xhr.send(null)
 </script>
 </body>
